# aggrec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  aggrec.toml  docker-compose.yaml  example.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: container.yml  test.yml
aggrec/: __init__.py  aggregates.py  app.py  client.py  creators.py  db_models.py  extras.py  healthcheck.py  helpers.py  key_cache.py  key_resolver.py  models.py  openapi.py  openapi.yaml  server.py  settings.py  stats.py  telemetry.py
clients/: test.pem
tests/: test_http_signatures.py  test_iso8601.py  test_key_cache.py  test_key_resolver.py  test_server.py
tools/: client.py  export_openapi_yaml.py
