[tool.poetry]
name = "aggrec"
version = "1.1.0.dev3"
description = "DNS TAPIR Aggregate Receiver"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
readme = "README.md"

[tool.poetry.scripts]
aggrec_server = "aggrec.server:main"
aggrec_client = "aggrec.client:main"

[tool.poetry.dependencies]
python = "^3.12"
dnstapir = {git = "https://github.com/dnstapir/python-dnstapir.git", rev = "v1.0.1", extras = ["opentelemetry"]}
mongoengine = "^0.29.0"
http-message-signatures = ">=0.5.0"
requests = "^2.30.0"
fastapi = ">=0.114.0"
uvicorn = ">=0.30.1"
pydantic-settings = "^2.7.1"
werkzeug = "^3.0.4"
boto3 = "^1.26.133"
aiomqtt = "^2.2.0"
pendulum = "^3"
pyyaml = "^6.0.1"
http-sf = "^1.0.2"
redis = "^5.1.1"
aiobotocore = ">=2.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = ">=0.8.2"
pytest-ruff = "^0.4.1"
pytest-asyncio = ">=0.24.0"
fakeredis = ">=2.25.1"
pytest-httpx = ">=0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "aggrec", "dnstapir"
]
extra-standard-library = [
    "tomllib",
]
combine-as-imports = true
split-on-trailing-comma = false
