[project]
name = "aggrec"
version = "1.1.0.dev5"
description = "DNS TAPIR Aggregate Receiver"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dnstapir[opentelemetry,keymanager]@git+https://github.com/dnstapir/python-dnstapir.git#v1.5.1",
    "aiobotocore>=2.21.1",
    "aiomqtt>=2.3.0",
    "aniso8601>=10.0.0",
    "boto3>=1.37.1",
    "fastapi>=0.115.11",
    "http-message-signatures>=0.5.0",
    "http-sf>=1.0.3",
    "mongoengine>=0.29.1",
    "nats-py>=2.9.0",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[project.urls]
repository = "https://github.com/dnstapir/nodeman.git"

[project.scripts]
aggrec_server = "aggrec.server:main"
aggrec_client = "aggrec.client:main"

[tool.setuptools]
packages = [ "aggrec" ]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "fakeredis>=2.27.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-httpx>=0.35.0",
    "pytest-ruff>=0.4.1",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "aggrec", "dnstapir"
]
extra-standard-library = [
    "tomllib",
]
combine-as-imports = true
split-on-trailing-comma = false
